replaces img with picture to solve cropping issues on mobile devices

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -81,7 +81,7 @@ body {
   margin-bottom: 1rem;
 }
 
-.carousel-item > img {
+.carousel-item > picture > img {
   width: 100%;
 }
 
